# hellolib

./: CMakeLists.txt  flake.nix  hello_world.cpp  hellolib.nix
include/: hello_world.h
